# quanterback

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: quanterback.local.toml.example  quanterback.toml  universe.txt  watchlist.txt
config/prompts/: agent_fundamentalist_en.md  agent_fundamentalist_zh.md  agent_risk_manager_en.md  agent_risk_manager_zh.md  agent_sentiment_en.md  agent_sentiment_zh.md  agent_technician_en.md  agent_technician_zh.md  momentum_strategist.md  momentum_strategist_zh.md  position_management_en.md  position_management_zh.md
config/templates/en/: analyze.j2  calibration.j2  control_freeze_reply.j2  control_halt_reply.j2  control_rescan_done.j2  control_rescan_error.j2  control_rescan_running.j2  control_rescan_timeout.j2  control_scan_done.j2  control_scan_error.j2  control_scan_queued_reply.j2  perf.j2  (+19 more)
docker/: Dockerfile  crontab  entrypoint.sh
docker/cron/: position-tracker.cron  scheduler.cron
src/quanterback/: __init__.py  analyze.py  brief.py  calibration.py  cli.py  config.py  failed_check_labels.py  i18n.py  perf.py  pipeline.py  replay.py  report.py  stress.py  ticker_resolver.py  tickers.py
tests/: conftest.py
tests/fakes/: executor.py  historical_data.py  llm_client.py  notifier.py  yfinance_stub.py
tests/fixtures/: sample_config.toml
tests/integration/: test_scan_pipeline.py
tests/unit/: test_analyze.py  test_brief.py  test_calibration.py  test_cli_chat_bot.py  test_cli_preview.py  test_cli_rescan.py  test_cli_scan_sync.py  test_config.py  test_failed_check_labels.py  test_i18n.py  test_i18n_humanize.py  test_perf.py  test_position_tracker.py  test_replay.py  test_report.py  test_smoke.py  test_stress.py  test_ticker_resolver.py  test_tickers.py
(+167 files in other folders)
