[project]
name = "quanterback"
version = "0.1.0"
description = "LLM-driven autonomous trading harness for Alpaca Paper Trading"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "anthropic>=0.40",
    "openai>=1.50",
    "alpaca-py>=0.30",
    "python-telegram-bot>=21.0",
    "pyarrow>=15.0",
    "requests>=2.31",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-requests>=2.31",
]

[project.scripts]
quanterback = "quanterback.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quanterback"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  # UP017: datetime.UTC alias — plan uses `timezone.utc`; either form is fine in py312
  "UP017",
  # UP042: spec Task 1.2 requires (str, Enum) not StrEnum
  "UP042",
  # UP037: forward-reference quotes intentional per spec (Task 2.3) for potential circular imports
  "UP037",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
# Allow `dict` / `list` without generic args for heterogeneous JSON-style payloads
# (NotificationEvent.payload, ExecutionResult.raw_response, etc.).
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "alpaca.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_errors = true
